--- a/src/Charts/Buttons.fxml
+++ b/src/Charts/Buttons.fxml
@@ -152,7 +152,7 @@
          <children>
             <HBox prefHeight="637.0" prefWidth="477.0" HBox.hgrow="ALWAYS">
                <children>
-                  <VBox alignment="CENTER" prefHeight="739.0" prefWidth="488.0" styleClass="container3" stylesheets="@../resources/Stylr.css">
+                  <VBox alignment="CENTER" prefHeight="739.0" prefWidth="488.0" styleClass="container" stylesheets="@../resources/Stylr.css">
                      <HBox.margin>
                         <Insets bottom="150.0" left="50.0" right="10.0" top="150.0" />
                      </HBox.margin>
@@ -164,7 +164,7 @@
                         </Label>
                      </children>
                   </VBox>
-                  <VBox alignment="CENTER" layoutX="60.0" layoutY="160.0" prefHeight="739.0" prefWidth="488.0" styleClass="container2" stylesheets="@../resources/Stylr.css">
+                  <VBox alignment="CENTER" layoutX="60.0" layoutY="160.0" prefHeight="739.0" prefWidth="488.0" styleClass="container" stylesheets="@../resources/Stylr.css">
                      <HBox.margin>
                         <Insets bottom="150.0" left="10.0" right="50.0" top="150.0" />
                      </HBox.margin>
